# ALEngine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  imgui.ini
AL/: CMakeLists.txt  Dependency.cmake
AL-ScriptCore/src/: Input.cs  InternalCalls.cs  Quaternion.cs  Vector2.cs
AL-ScriptCore/src/Scene/: Component.cs  Entity.cs
AL/include/: AL.h  alpch.h
AL/include/Core/: App.h  Assert.h  Base.h  Buffer.h  EntryPoint.h  FileSystem.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Log.h  MouseCodes.h  Timestep.h  UUID.h  Window.h
AL/include/Debug/: Instrumentor.h
AL/include/Events/: AppEvent.h  Event.h  KeyEvent.h  MouseEvent.h
AL/include/ImGui/: ImGuiLayer.h
AL/include/Memory/: BlockAllocator.h  StackAllocator.h
AL/include/Physics/: BroadPhase.h  Collision.h  DynamicTree.h  Fixture.h  Island.h  Physics.h  PhysicsAllocator.h  Rigidbody.h  World.h
AL/include/Project/: Project.h  ProjectSerializer.h
AL/include/Renderer/: AnimationStateManager.h  Buffer.h  Camera.h  CameraController.h  CommandBuffers.h  Common.h  DescriptorSetLayout.h  EditorCamera.h  FrameBuffers.h  Material.h  Mesh.h  Model.h  OBJLoader.h  Object.h  Pipeline.h  RenderPass.h  Renderer.h  RenderingComponent.h  SAComponent.h  Scene.h  SwapChain.h  (+5 more)
Sandbox/src/: EditorLayer.cpp  EditorLayer.h
makefiles/: Makefile.msvc
projects/template/: AfterLife.alproj.in
shaders/: LightingPass.frag  ShadowCubeMapSSBO.vert  ShadowMapSSBO.vert  collider.vert  sphericalMap.frag
spvs/: LightingPass.frag.spv  ShadowCubeMapSSBO.vert.spv  ShadowMapSSBO.vert.spv  collider.vert.spv  sphericalMap.frag.spv
(+136 files in other folders)
